--- a/style/common/typography.css
+++ b/style/common/typography.css
@@ -1,4 +1,4 @@
 :root {
-    --font-family-navigation: Arial Black;
-    --font-size-navigation: 12px ;
+    --font-family-navigation: Arial;
+    --font-size-navigation: 13px ;
 }
