--- a/style/components/banner.css
+++ b/style/components/banner.css
@@ -6,30 +6,33 @@
     font-family: var(--font-family-navigation);
 }
 .banner_right {
-    width: 45%;
+    width: 45.9%;
 }
 
 .banner_heading {
-    font-size: 30px;
+    font-size: 44px;
     color: white;
-    margin: 20px 0;
+    margin-bottom: 5px;
     font-weight: 600;
 }
 
 .banner_subtitle {
-    font-size: 25px;
-    margin: 20px 0;
+    font-size: 38px;
+    margin-bottom: 4px;
     font-weight: 500;
 }
 
 .banner_text {
     font-size: 10px;
     color: white;
-    margin: 20px 0;
+    margin-bottom: 35px;
     font-weight: 600;
     line-height: 19px;
 }
 
 .banner_button {
-    margin: 20px 0;
+    margin-bottom: 39px;
+    height: 32px;
+    width: 92px;
+    border-radius: 6px;
 }
