--- a/style/_main.css
+++ b/style/_main.css
@@ -2,4 +2,5 @@
 @import "color.css";
 @import "common/typography.css";
 @import "components/header.css";
-@import "components/banner.css"
+@import "components/banner.css";
+@import "components/maincontent.css"
