--- a/style/_main.css
+++ b/style/_main.css
@@ -3,4 +3,5 @@
 @import "common/typography.css";
 @import "components/header.css";
 @import "components/banner.css";
-@import "components/maincontent.css"
+@import "components/maincontent.css";
+@import "components/footer.css"
