--- a/style/components/footer.css
+++ b/style/components/footer.css
@@ -16,12 +16,12 @@
     z-index: -1;
 }
 
-.footer::before {
-   background-image: url(../../img/footer_bg.jpg);
-   width: 100px;
-   height: 121px;
+/* .footer::before {
    content: " ";
-   left: -150px;
+   background-image: url(../../img/footer_bg.jpg);
+   width: 100%;
+   height: 100%;
+   left: -15px;
    bottom: 0px;
-   position: relative;
-}
+   position: ;
+} */
