--- a/style/components/header.css
+++ b/style/components/header.css
@@ -8,11 +8,12 @@
 
 .header_top {
     height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.header_top::after {
-    content: "Call us now: 800-567-8888";
-    position: absolute;
+.header_top-call {
     top: 10px;
     right: 5px;
     color: white;
