--- a/style/_main.css
+++ b/style/_main.css
@@ -4,4 +4,5 @@
 @import "components/header.css";
 @import "components/banner.css";
 @import "components/maincontent.css";
-@import "components/footer.css"
+@import "components/footer.css";
+@import "components/news.css";
