--- a/style/components/footer.css
+++ b/style/components/footer.css
@@ -11,17 +11,19 @@
 
 .footer_bg {
     width: 1000px;
-    height: 121px;
+    height: 122px;
     position: absolute;
     z-index: -1;
 }
 
-/* .footer::before {
-   content: " ";
-   background-image: url(../../img/footer_bg.jpg);
-   width: 100%;
-   height: 100%;
-   left: -15px;
-   bottom: 0px;
-   position: ;
-} */
+.footer::before {
+    content: " ";
+    position: absolute;
+    display: block;
+    background-image: url(../../img/footer_bg.jpg);
+    height: 122px;
+    left: 0;
+    z-index: -1;
+    right: 0;
+    bottom: -515px;
+}
