--- a/style/components/maincontent.css
+++ b/style/components/maincontent.css
@@ -10,13 +10,15 @@
     margin-left: 30px;
 }
 .maincontent_h1 {
-    font-size: 26px;
-    margin-top: 45px;
+    font-size: 24px;
+    margin-top: 47px;
+    font-weight: 600;
 }
 
 .maincontent_p {
-    font-size: 18px;
-    margin-top: 2px
+    font-size: 16px;
+    margin-top: 2px;
+    margin-left: 4px;
 }
 
 
@@ -48,16 +50,17 @@
     font-weight: 600;
     font-family: var(--font-family-navigation);
     padding-left: 7px;
-    padding-top: 39px;
+    padding-top: 37px;
     color: gray;
 }
 
 .maincontents_content-heading-text-heading {
-    margin-top: 19px;
+    margin-top: 18px;
     font-family: arial;
     text-transform: uppercase;
-    font-size: 13.8px;
+    font-size: 14px;
     font-weight: 600;
+    color: rgb(52, 167, 52);
 }
 .maincontents_content-heading-text-description {
     width: 642px;
@@ -112,12 +115,12 @@
     font-size: 24px;
     font-weight: 600;
     font-family: var(--font-family-navigation);
-    margin-top: 26px;
+    margin-top: 23px;
 }
 
 .maincontents_content-subtitle-work-text-description {
     width: 642px;
-    margin-top: 30px;
+    margin-top: 29px;
     font-family: arial;
     font-size: 13px;
     line-height: 142%;
