add password css

--- a/style/_main.css
+++ b/style/_main.css
@@ -6,3 +6,4 @@
 @import "components/maincontent.css";
 @import "components/footer.css";
 @import "components/news.css";
+@import "components/password.css";
