--- a/style/components/password.css
+++ b/style/components/password.css
@@ -1,3 +1,30 @@
+.maincontents_content-password {
+    position: relative;
+    width: 255px;
+    height: 286px;
+    margin-top: 28px;
+    margin-left: 16px;
+    background-color: #f6f6f6;
+    border: 1px solid gray;
+    border-radius: 12px;
+}
+
+.maincontents_content-password-title {
+    position: absolute;
+    margin-left: 19px;
+    padding-top: 34px;
+    font-family: var(--font-family-navigation);
+    font-weight: 800;
+    font-size: 21.7px;
+    color: green;
+}
+
+
+.password-img {
+    position: absolute;
+    /* z-index: -1; */
+}
+
 .maincontents_content-password-name {
     position: absolute;
     padding-top: 68px;
@@ -5,54 +32,93 @@
 }
 
 .maincontents_content-password-more-account {
-    height: 60px;
     display: flex;
     align-items: center;
-    margin-top: 180px;
+    margin-top: 224px;
+    margin-left: 34px;
+}
+
+.maincontents_content-password-more-account-img,
+.maincontents_content-password-more-password-img {
+    display: flex;
 }
 
 .maincontents_content-password-more-password {
     display: flex;
     align-items: center;
+    margin-top: 10px;
+    margin-left: 34px;
 }
 
 .maincontents_content-password-more-account-txt {
     font-family: arial;
-    font-weight: 800;
     font-size: 11px;
     margin-left: 6px;
-    color: orange;
 }
 
 .maincontents_content-password-more-password-txt {
     font-family: arial;
-    font-weight: 800;
     font-size: 11px;
     margin-left: 6px;
-    color: orange;
 }
 
-input {
+ input {
     border-radius: 15px;
     margin: 0;
-    height: 20px;
+    height: 11px;
 }
 
-.account-info {
-    /* padding: 20px 20px 0 20px; */
-  }
-  .account-info label {
+
+.account-info label {
     color: #395870;
+    letter-spacing: -0.3px;
     display: block;
-    font-weight: bold;
-    /* margin-bottom: 20px; */
+    margin-top: 4px;
+    margin-left: 12px;
+    font-size: 13px;
   }
-  .account-info input {
+
+.upassword {
+    padding-top: 3px;
+  }
+
+.password {
+
+}
+
+.account-info input {
     background: #fff;
     border: 1px solid #c6c7cc;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
     color: #636466;
     padding: 6px;
-    margin-top: 6px;
-    width: 100%;
+    margin-top: 7px;
+    width: 167px;
+    font-size: 11px;
+    padding-left: 11px;
+    padding-top: 8px;
+  }
+
+
+.account-info span {
+    color: red;
+}
+
+.btn {
+    background: linear-gradient(#df8806, orange);
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    float: left;
+    padding: 4px 17px;
+    margin-top: 12px;
+    height: 24px;
+    width: 70px;
+    font-size: 11px;
+  }
+
+  .password-more {
+    text-decoration: none;
+    color: black;
   }
