--- a/style/components/banner.css
+++ b/style/components/banner.css
@@ -6,7 +6,7 @@
     font-family: var(--font-family-navigation);
 }
 .banner_right {
-    width: 45.9%;
+    width: 46%;
 }
 
 .banner_heading {
@@ -18,16 +18,20 @@
 
 .banner_subtitle {
     font-size: 38px;
-    margin-bottom: 4px;
+    margin-left: 0.5px;
+    margin-bottom: 3.5px;
     font-weight: 500;
 }
 
 .banner_text {
+    letter-spacing: 0.1px;
+    margin-right: 25px;
     font-size: 10px;
     color: white;
     margin-bottom: 17px;
     font-weight: 600;
     line-height: 19px;
+    font-family: var(--font-family-navigation);
 }
 
 .banner_button {
@@ -35,4 +39,5 @@
     height: 32px;
     width: 92px;
     border-radius: 6px;
+    background: radial-gradient(rgb(214, 210, 210), #eeebeb);
 }
