--- a/style/_main.css
+++ b/style/_main.css
@@ -1,5 +1,5 @@
 @import "components/reset.css";
-@import "color.css";
+@import "common/color.css";
 @import "common/typography.css";
 @import "components/header.css";
 @import "components/banner.css";
