--- a/style/components/maincontent.css
+++ b/style/components/maincontent.css
@@ -64,7 +64,7 @@
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 600;
-    color: rgb(52, 167, 52);
+    color: var(--color-content-heading);
 }
 .maincontents_content-heading-text-description {
     margin-left: 1px;
@@ -89,7 +89,7 @@
     font-weight: 800;
     font-size: 11px;
     margin-left: 6px;
-    color: orange;
+    color: var(--color-orange);
 }
 
 
@@ -130,14 +130,14 @@
     font-size: 14px;
     font-weight: 600;
     letter-spacing: -0.6px;
-    color: orange;
+    color: var(--color-orange);
 }
 
 .maincontents_content-subtitle-work-person-description-text-heading {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: -0.6px;
-    color: orange;
+    color: var(--color-orange);
 }
 
 .maincontents_content-subtitle-work-clock-description-text-description {
@@ -162,7 +162,7 @@
     font-weight: 800;
     font-size: 11px;
     margin-left: 6px;
-    color: orange;
+    color: var(--color-orange);
 }
 
 .maincontents_content-subtitle-work-person-description {
@@ -198,11 +198,11 @@
     font-weight: 800;
     font-size: 11px;
     margin-left: 6px;
-    color: orange;
+    color: var(--color-orange);
 }
 
 .read more {
     text-decoration: none;
-    color: orange;
+    color: var(--color-orange);
 }
 
