--- a/style/components/password.css
+++ b/style/components/password.css
@@ -5,7 +5,7 @@
     margin-top: 28px;
     margin-left: 16px;
     background-color: #f6f6f6;
-    border: 1px solid gray;
+    border: 1px solid #c6c7cc;
     border-radius: 12px;
 }
 
@@ -16,7 +16,7 @@
     font-family: var(--font-family-navigation);
     font-weight: 800;
     font-size: 21.7px;
-    color: green;
+    color: var(--color-content-heading);
 }
 
 
