--- a/style/components/password.css
+++ b/style/components/password.css
@@ -118,6 +118,12 @@
     font-size: 11px;
   }
 
+  .btn:active {
+    color: red;
+    border:none;
+    outline: none;
+}
+
   .password-more {
     text-decoration: none;
     color: black;
